2009-10-18  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c, interface.c, telemetry.c, aprx.h, ttyreader.c,
	  erlang.c:
	    Start transmitting digipeated frames to ttyreader's KISS
	    output.  netax25's similar interface is not tested.
	    Changed also the Erlang dataset format, and begun to
	    produce Tx packet counts on telemetry.

	* aprx.h, interface.c, digipeater.c, pbuf.h, pbuf.c, ax25.c:
	    Pass the UI PID information all the way to interface,
	    where it can be matched against a list of PIDs that will
	    be treated alike APRS in digipeating.
	    Have two modes in digipeating: one with interface (and
	    aliases) as recognized work targets, and other with APRS
	    wide/trace tags in addition to interface (and aliases).

	* aprx.h, ax25.c, interface.c, digipeater.c, aprx.conf.in,
	  aprx-complex.conf.in:
	    - Prefill AX.25 address field formatted ax25callsign
	      field on all <interface> datastructures.  That comes
	      handy when doing TRACE processing.
	    - Put exact "callsigns" of "WIDE", "TRACE", and "RELAY"
	      into system as interface callsign aliases. When they
	      are present in the request path, substitute interface
	      callsign there with H-bit set.
	    - Update aprx.conf samples to how the system can be
	      configured.

2009-10-17  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, digipeater.c, interface.c, pbuf.h, parse_aprs.c:
	    Digipeater preparation, system counts done and requested
	    distribution operations with source specific as well as
	    transmitter specific keywords.

	* aprx.h, ax25.c, interface.c, aprsis.c, pbuf.c, parse_aprs.c:
	    Changed a few "parse failed" returns to "parse OK".
	    Systematic feed of datapacket "with TNC2 line end CRLF pair".

2009-10-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* erlang.c, aprx.h, ttyreader.c, netax25.c, igate.c:
	    Clean Erlang accountig API.  Removed unused parameters.
